Se agrega algunos endpoints por bugs, se crean pruebas unitarias y se procede a documentar